--- a/compass/scss/_videosPage.scss
+++ b/compass/scss/_videosPage.scss
@@ -10,7 +10,8 @@
     width: 100%;
   }
   #video_viewer{
-    float: left;  
+    float: left;
+    width: 70%; 
     h1{
       font-weight: bold;
     }  
